jdk8 adaptations